<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#253334"
    tools:context=".Main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="100dp"
                android:src="@drawable/ic_menu" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="100dp"
                android:src="@drawable/ic_logo" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/users_photo" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="15dp"
            android:text="@string/good_afternoon"
            android:textColor="#fcfcfc"
            android:textSize="25sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/how_do_you_feel"
            android:textColor="#9e9e9e"
            android:textSize="18sp"
            tools:ignore="MissingConstraints" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/calm"
                android:layout_width="55dp"
                android:layout_height="57dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/ic_calm" />

            <TextView
                android:id="@+id/text_calm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="80dp"
                android:text="@string/calm"
                android:textColor="#fcfcfc"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <ImageView
                android:id="@+id/relax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_toEndOf="@id/calm"
                android:background="@drawable/ic_relax" />

            <TextView
                android:id="@+id/text_relax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="80dp"
                android:layout_toEndOf="@id/text_calm"
                android:text="@string/relax"
                android:textColor="#fcfcfc"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <ImageView
                android:id="@+id/focus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="29dp"
                android:layout_toEndOf="@id/relax"
                android:background="@drawable/ic_focus" />

            <TextView
                android:id="@+id/text_focus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="37dp"
                android:layout_marginTop="80dp"
                android:layout_toEndOf="@id/text_relax"
                android:text="@string/focus"
                android:textColor="#fcfcfc"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <ImageView
                android:id="@+id/anxiety"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/focus"
                android:background="@drawable/anxiety" />

            <TextView
                android:id="@+id/text_anxiety"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="37dp"
                android:layout_marginTop="80dp"
                android:layout_toEndOf="@id/text_focus"
                android:text="@string/anxiety"
                android:textColor="#fcfcfc"
                android:textSize="10dp" />

        </RelativeLayout>
        <!--<androidx.recyclerview.widget.RecyclerView-->
        <!--    android:layout_marginTop="10dp"-->
        <!--    android:layout_width="match_parent"-->
        <!--    android:layout_height="wrap_content"-->
        <!--        tools:listitem="@layout/list_item"-->
        <!--        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20sp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/body_of_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F7F3F0"
                android:padding="10dp"
                android:text="@string/body_of_light"
                android:textColor="#000000"
                android:textSize="23sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/personal_development"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_marginTop="45dp"
                android:background="#F7F3F0"
                android:padding="10dp"
                android:text="@string/personal_develoepment"
                android:textColor="#000000"
                android:textSize="13sp" />


            <ImageView
                android:id="@+id/card_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/personal_development"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="35dp"
                android:background="#F7F3F0"
                android:src="@drawable/card_1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/next_1"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="100dp"
                android:backgroundTint="#253334"
                android:onClick="enter_in_sound_playlist"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/start"
                android:textAllCaps="false"
                android:textColor="#fcfcfc"
                android:textSize="15sp"
                app:cornerRadius="10dp"
                app:icon="@drawable/ic_next"
                app:iconGravity="textEnd"
                app:iconPadding="16dp"
                app:iconTint="@color/white" />

            <TextView
                android:id="@+id/sacred_geometry_mandalas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="180dp"
                android:background="#F7F3F0"
                android:padding="10dp"
                android:text="Сакральная геометрия–Мандалы"
                android:textColor="#000000"
                android:textSize="23dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/change_in_consciousness"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="255dp"
                android:background="#F7F3F0"
                android:padding="10dp"
                android:text="Изменение сознания с помощью мандалов и улучшение качества жизни."
                android:textColor="#000000"
                android:textSize="13sp" />


            <ImageView
                android:id="@+id/card_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="210dp"
                android:background="@drawable/card_2" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/next_2"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="306dp"
                android:backgroundTint="#253334"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/start"
                android:textAllCaps="false"
                android:textColor="#fcfcfc"
                android:textSize="15sp"
                app:cornerRadius="10dp"
                app:icon="@drawable/ic_next"
                app:iconGravity="textEnd"
                app:iconPadding="16dp"
                app:iconTint="@color/white" />

            <TextView
                android:id="@+id/energy_practices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="385dp"
                android:background="#F7F3F0"
                android:padding="10dp"
                android:text="Энергетические практики"
                android:textColor="#000000"
                android:textSize="23sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/meditation"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_marginTop="430dp"
                android:background="#F7F3F0"
                android:padding="10dp"
                android:text="Медитации, основанные на биоэнергетике и экстрасенсорике человека."
                android:textColor="#000000"
                android:textSize="13sp" />


            <ImageView
                android:id="@+id/card_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="400dp"
                android:background="@drawable/card_3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/next_3"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="491dp"
                android:backgroundTint="#253334"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/start"
                android:textAllCaps="false"
                android:textColor="#fcfcfc"
                android:textSize="15sp"
                app:cornerRadius="10dp"
                app:icon="@drawable/ic_next"
                app:iconGravity="textEnd"
                app:iconPadding="16dp"
                app:iconTint="@color/white" />

            <TextView
                android:id="@+id/purpose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="555dp"
                android:background="#F7F3F0"
                android:padding="10dp"
                android:text="Предназначение"
                android:textColor="#000000"
                android:textSize="23sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/helps_to_find"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="600dp"
                android:background="#F7F3F0"
                android:padding="10dp"
                android:text="Поможет найти своё место в жизни и быть полезным своим близким."
                android:textColor="#000000"
                android:textSize="13sp" />


            <ImageView
                android:id="@+id/card_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="590dp"
                android:background="@drawable/card_4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/next_4"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="656dp"
                android:backgroundTint="#253334"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/start"
                android:textAllCaps="false"
                android:textColor="#fcfcfc"
                android:textSize="15sp"
                app:cornerRadius="10dp"
                app:icon="@drawable/ic_next"
                app:iconGravity="textEnd"
                app:iconPadding="16dp"
                app:iconTint="@color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="40dp"
            android:paddingRight="40dp">

            <ImageView
                android:id="@+id/footer_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#253334"
                android:src="@drawable/ic_footer_lotus"
                tools:ignore="MissingConstraints" />


            <ImageView
                android:id="@+id/footer_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_toEndOf="@id/footer_logo"
                android:background="#253334"
                android:src="@drawable/ic_footer_music"
                tools:ignore="MissingConstraints" />


            <ImageView
                android:id="@+id/footer_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_toEndOf="@id/footer_music"
                android:background="#253334"
                android:src="@drawable/ic_footer_user"
                tools:ignore="MissingConstraints" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>

